Changing the line width settings drastically affects the font size of frame labels #96157

Closed
opened 2022-03-04 10:34:18 +01:00 by Antoine · 8 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce GTX 1660 Ti with Max-Q Design

Blender Version
Behaviour is reproducible in 3.0 and 3.1

Short description of error
Changing the line width in the interface settings drastically changes the font size of frame labels in any graph windows.

Note: I'm using a high DPI monitor (surface book 3), not sure if this relevant.

Exact steps for others to reproduce the error
Just changing the line width setting
Screenshot 2022-03-04 093142.png

Screenshot 2022-03-04 093259.png

Screenshot 2022-03-04 093323.png

**System Information** Operating system: Windows 10 Graphics card: NVIDIA GeForce GTX 1660 Ti with Max-Q Design **Blender Version** Behaviour is reproducible in 3.0 and 3.1 **Short description of error** Changing the line width in the interface settings drastically changes the font size of frame labels in any graph windows. Note: I'm using a high DPI monitor (surface book 3), not sure if this relevant. **Exact steps for others to reproduce the error** Just changing the line width setting ![Screenshot 2022-03-04 093142.png](https://archive.blender.org/developer/F12896822/Screenshot_2022-03-04_093142.png) ![Screenshot 2022-03-04 093259.png](https://archive.blender.org/developer/F12896821/Screenshot_2022-03-04_093259.png) ![Screenshot 2022-03-04 093323.png](https://archive.blender.org/developer/F12896820/Screenshot_2022-03-04_093323.png)
Author

Added subscriber: @AntoineP

Added subscriber: @AntoineP
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @dominikfill

Added subscriber: @dominikfill
Dominik Fill self-assigned this 2022-03-14 18:11:12 +01:00

Hey, submitted a patch for this here: D14338

Hey, submitted a patch for this here: [D14338](https://archive.blender.org/developer/D14338)

This issue was referenced by f523fb1dc9

This issue was referenced by f523fb1dc9bb9228820620648752ea69e4936379

This issue was referenced by c8cef83fae

This issue was referenced by c8cef83faece3eeda6d2020e8335931045cdaa73
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96157
No description provided.